# appinfo-rs

./: Cargo.toml  README.md
src/: cli.rs  lib.rs
tests/: 01-hello-world.rs  setup-tests.rs
